--- a/app/src/main/res/layout/activity_orders_fragment.xml
+++ b/app/src/main/res/layout/activity_orders_fragment.xml
@@ -9,8 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="55dp"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
