--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,38 +7,45 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_edit" />
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:minHeight="?actionBarSize"
+            android:padding="@dimen/appbar_padding"
+            android:text="@string/profile_label"
+            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+            android:textColor="@color/backColor" />
+    </com.google.android.material.appbar.AppBarLayout>
+
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/appbar">
 
         <ImageView
             android:id="@+id/avatar"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="35dp"
-            android:layout_marginRight="0dp"
             app:srcCompat="@drawable/photo" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
@@ -51,7 +58,7 @@
                 android:layout_marginBottom="20dp"
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/profile_name"
-                android:textColor="#555555"
+                android:textColor="#757575"
                 android:textSize="18sp" />
 
             <LinearLayout
@@ -64,22 +71,22 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_phone" />
+                    app:srcCompat="@drawable/ic_phone_black" />
 
                 <TextView
                     android:id="@+id/profile_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="5dp"
                     android:fontFamily="@font/roboto_medium"
                     android:paddingBottom="3dp"
                     android:text="@string/profile_phone"
-                    android:textColor="#555555"
+                    android:textColor="#757575"
                     android:textSize="15sp" />
             </LinearLayout>
 
         </LinearLayout>
+
     </LinearLayout>
     <View
         android:id="@+id/divider"
@@ -99,54 +106,76 @@
         app:layout_constraintTop_toBottomOf="@id/divider">
 
         <LinearLayout
+            android:id="@+id/my_stores"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_height="50dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_gravity="center"
                 app:srcCompat="@drawable/ic_shopping_cart" />
 
             <TextView
-                android:id="@+id/my_stores"
+                android:id="@+id/my_stores_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
+                android:layout_gravity="center"
+                android:textSize="16sp"
                 android:text="@string/my_stores" />
 
         </LinearLayout>
-
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="?android:attr/listDivider"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:id="@+id/quit">
 
             <ImageView
                 android:id="@+id/exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_gravity="center"
                 app:srcCompat="@drawable/ic_exit" />
 
             <TextView
-                android:id="@+id/quit"
+                android:id="@+id/quit_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center"
+                android:textSize="16sp"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
                 android:text="@string/quit" />
 
         </LinearLayout>
-
+        <View
+            android:id="@+id/divider3"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="?android:attr/listDivider"/>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:padding="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:srcCompat="@drawable/ic_edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
