--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -22,7 +22,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="35dp"
-            app:srcCompat="@drawable/photo" />
+            app:srcCompat="@drawable/usericon" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -35,14 +35,14 @@
 
             <EditText
                 android:id="@+id/profile_name"
-                android:minWidth="100dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/roboto_medium"
-                android:text="@string/profile_name"
+                android:hint="Имя не введено"
                 android:textColor="#757575"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
 
             <TextView
                 android:id="@+id/change_photo"
@@ -53,7 +53,8 @@
                 android:layout_marginStart="3dp"
                 android:text="@string/change_photo"
                 android:textColor="#757575"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:visibility="invisible"/>
 
         </LinearLayout>
 
