--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,7 +42,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="35dp"
-            app:srcCompat="@drawable/photo" />
+            app:srcCompat="@drawable/usericon" />
 
         <LinearLayout
             android:layout_width="0dp"
