--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4C8FF3</color>
     <color name="colorPrimaryDark">#707070</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#4C8FF3</color>
     <color name="inactiveColor">#757575</color>
     <color name="ratingColor">#EB6E00</color>
     <color name="textColor">#000000</color>
