--- a/app/src/main/res/layout/activity_add_cashbox.xml
+++ b/app/src/main/res/layout/activity_add_cashbox.xml
@@ -10,6 +10,30 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
+    <TextView
+        android:id="@+id/storeName_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/storeName_label"
+        android:textColor="@color/inactiveColor"
+        app:layout_constraintBottom_toTopOf="@+id/storeName"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/storeName"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="30dp"
+        android:autofillHints="address"
+        android:background="@drawable/spinner_inactive"
+        android:hint="@string/storeName_hint"
+        android:inputType="text"
+        android:textColor="@color/textColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/cashboxName_label"
@@ -34,7 +58,7 @@
         android:textColor="@color/textColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/storeName" />
 
 
 
