--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
-                app:srcCompat="@drawable/ic_shopping_cart" />
+                app:srcCompat="@drawable/ic_store_mall" />
 
             <TextView
                 android:id="@+id/my_stores_text"
@@ -128,6 +128,38 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:text="@string/my_stores"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/dividerNew"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="?android:attr/listDivider" />
+
+        <LinearLayout
+            android:id="@+id/my_cashboxes"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/cashboxImg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                app:srcCompat="@drawable/ic_cashbox" />
+
+            <TextView
+                android:id="@+id/my_cashboxes_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:text="@string/my_cashboxes"
                 android:textSize="16sp" />
 
         </LinearLayout>
