--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
+    android:fillViewport="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -61,10 +62,10 @@
             android:layout_height="45dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/spinner_inactive"
+            android:clickable="false"
             android:prompt="@string/select_hint"
             android:spinnerMode="dropdown"
             android:theme="@style/spinner"
-            android:clickable="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/problemStore" />
@@ -139,7 +140,6 @@
                 android:id="@+id/attach_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/ic_attachment" />
 
             <TextView
@@ -153,23 +153,46 @@
                 android:textColor="@color/inactiveColor" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/attachImg_icon"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayout7"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:orientation="horizontal"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:srcCompat="@drawable/ic_attach" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+            <ImageView
+                android:id="@+id/attachImg_icon1"
+                android:layout_width="59dp"
+                android:layout_height="59dp"
+                app:srcCompat="@drawable/ic_attach" />
+
+            <ImageView
+                android:id="@+id/attachImg_icon2"
+                android:layout_width="59dp"
+                android:layout_height="59dp"
+                android:layout_marginLeft="15dp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_attach" />
+
+            <ImageView
+                android:id="@+id/attachImg_icon3"
+                android:layout_width="59dp"
+                android:layout_height="59dp"
+                android:layout_marginLeft="15dp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_attach" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/continueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:layout_marginBottom="20dp"
             android:background="@drawable/notenabledbutton"
             android:elevation="3dp"
             android:enabled="false"
@@ -180,9 +203,10 @@
             android:translationZ="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/attachImg_icon" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
+            app:layout_constraintVertical_bias="0.188" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
